--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "proxy": "http://localhost:3001/",
   "devDependencies": {
     "concurrently": "^3.6.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^3.0.1"
   },
   "dependencies": {
     "react": "^15.4.2",
