--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
     "client/node_modules"
   ],
   "dependencies": {
-    "babel-cli": "6.14.0",
-    "babel-core": "6.14.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.19.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^2.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "mongoose": "^4.13.18",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.11",
     "passport-session": "^1.0.2",
     "passport-slack": "0.0.7",
     "style-loader": "^0.18.1",
-    "webpack": "^2.7.0",
+    "webpack": "^4.32.2",
     "webpack-combine-loaders": "^2.0.4"
   },
   "repository": {
@@ -51,6 +51,8 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^3.6.1",
-    "nodemon": "^1.19.1"
+    "mini-css-extract-plugin": "^0.7.0",
+    "nodemon": "^1.19.1",
+    "webpack-cli": "^3.3.2"
   }
 }
